	then be asserted on a page using panda_asserttemplate().

  * Fixed the namespace on variable names as well... This included moving some
	stuff out of the gcc reserved namespace (__*) in objects.h.

  * The namespace changes were lots of fun (not). I suggest that no-one ever
	do them again...

  * Added legacymain.c to check that the legacy function mappings and stuff
	actually work

  * BACKPORTED FROM PANDA 0.3.2: Fixed some small problems with the
	configure script, added the Makefile.am to the distribution and made
	some small changes requested by the users...

  * Started rearranging the demo document so that it shows the features of
	Panda in a less confusing manner.

  * If you failed to setup font details before writing a string, Panda would
	crash. It now works on reasonable defaults.

  * Made dmalloc stop complaining about freeing NULL pointers, I assume this 
	makes the code more portable.

  * The saga of the vertical line in JPEG images (reported by dave@valinux.com)
	- a vertical line appears down the LHS of JPEG images embedded by Panda
	- visible in: acroread (linux)
	- not visible in: acroread (win32) gv (linux) xpdf (linux)

	As a sanity check, I created a PDF using acrobat on a win32 box of just
	the JPEG image in question... I then compared the streams. They are 
	definitely different, but it would appear that acrobat is converting
	the image into a TIFF stream before insertion, possibly because of this
	sort of problem.

  * Uncompressed TIFF images may now be inserted into PDF documents.

  * Grayscale TIFF images now can be embedded as well...

========================== 0.4 RC 1 Released ==================================

  * Documented all of the function calls in curves.c using autodocbook

  * Documented all of the function calls in dates.c using autodocbook

  * Fixed the date code so that it actually determines the timezone and the 
	current time properly... I need to make sure this is portable still...