@@ -95,3 +95,7 @@ Release 0.3 -> Release 0.4
 
   * Fixed the date code so that it actually determines the timezone and the 
 	current time properly... I need to make sure this is portable still...
+
+  * Documented all the function calls in font.c using autodocbook
+
+  * Documented all of the function calls in images.c using autodocbook
